# chat_bot_api/app_model/views.py
@@ -16,7 +16,7 @@ from rest_framework import status
 from rest_framework_simplejwt.authentication import JWTAuthentication
 
 from core.models import LogSystem
-from .tasks import set_database_and_train_data
+from .tasks import set_database_and_train_data, get_response_from_vector_base
 from .models import TaskStatus
 
 
@@ -104,3 +104,50 @@ class TrainTaskStatusView(APIView):
             LogSystem.objects.create(error = str(e), stacktrace = traceback.format_exc())
 
             return Response({'error': str(e)}, status = status.HTTP_500_INTERNAL_SERVER_ERROR)
+        
+
+
+class SearchInformationView(APIView):
+    '''View for sendind an question or sentence and getting an answer based on Sentece Similarity.'''
+
+    permission_classes = (IsAuthenticated,)
+    authentication_classes = (JWTAuthentication,)
+
+    def post(self, request: Request) -> Response:
+        '''
+        Call post HTTP verb and return a message with question or sentence passed on body endpoint answer.
+
+        Args:
+            request: object for getting client data.
+
+        Return:
+            A response object with Sentence SImilarity response.
+        '''
+
+        data_base_path = settings.MEDIA_ROOT
+
+        try:
+            question = request.data.get('prompt', None)
+
+            response_json = get_response_from_vector_base(question, data_base_path)
+
+            return Response(response_json, status = status.HTTP_200_OK)
+        
+        except AuthenticationFailed:
+            return Response({'error': 'Authentication failed.'}, status = status.HTTP_401_UNAUTHORIZED)
+        
+        except ValidationError as e:
+            error_message = next(iter(e.detail.values()))[0]
+
+            return Response({'error': error_message}, status = status.HTTP_400_BAD_REQUEST)
+        
+        except ParseError as e:
+            return Response({'error': 'Bad request'}, status = status.HTTP_400_BAD_REQUEST)
+        
+        except (ValueError, FileNotFoundError) as e:
+            return Response({'error': str(e)}, status = status.HTTP_404_NOT_FOUND)
+        
+        except Exception as e:
+            LogSystem.objects.create(error = str(e), stacktrace = traceback.format_exc())
+
+            return Response({'error on process sentence: ': str(e)}, status = status.HTTP_500_INTERNAL_SERVER_ERROR)
